Add syntax for "approximately equal": `~~`
In CSQA, they define "approximately equal" to be within the standard
deviation. Add this allow us to convert these examples in CSQA into
thingtalk

--- a/test/test_syntax.tt
+++ b/test/test_syntax.tt
@@ -1963,4 +1963,9 @@ $dialogue @org.thingpedia.dialogue.transaction.sys_invalid(5 + 3);
 ====
 
 // yes no questions
-[contains(shares_border_with, "Q65"^^org.wikidata:city("los angeles"))] of (@org.wikidata.city(), id == "Q16739"^^org.wikidata:city("long beach"));
+[contains(shares_border_with, "Q65"^^org.wikidata:city("los angeles"))] of (@org.wikidata.city() filter id == "Q16739"^^org.wikidata:city("long beach"));
+
+====
+
+// approximately equal (from csqa)
+@org.wikidata.city() filter area ~~ 1000m2;
